fixed merge conflict

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="tiny-graphics.js" ></script>  <!--  Javascript "include" files.  Any code in them gets executed as part of the page loading. //-->
         <script src= "dependencies.js" ></script>
         <script src=   "main-scene.js" ></script>
-        <link rel="stylesheet" type="text/css" href="styles2.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>       <!-- Begin typing the next of your web page here. //-->
         <!-- Adding bgm here because I feel like adding it using javascript degrades the quality. -->
